[package]
name = "bevy_luna"
version = "0.1.0"
edition = "2024"

[lints.clippy]
doc_markdown = "warn"
manual_let_else = "warn"
redundant_else = "warn"
semicolon_if_nothing_returned = "warn"
unwrap_or_default = "warn"

[lints.rust]
missing_docs = "warn"
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "warn"

[dependencies]
bevy = { version = "0.18", default-features = false, features = ["3d"] }
bevy_solari = { version = "0.18.1" }
bevy_shader = { version = "0.18" }
